// ============================================================
// UCR LINE AI-Chatbot — DB Design v2 (greenfield)
// เปิดเป็นแผนภาพ: ก๊อปทั้งไฟล์ไปวางที่ https://dbdiagram.io
//
// ออกแบบเพื่ออนาคต AI-chatbot โดยตรง (ไม่ลากโครงตารางเก่ามา)
// หลักคิด:
//   1. Postgres เก็บเฉพาะของที่ต้อง "query" — ของดิบไม่ลง DB
//      (บทสนทนา AI: live → Redis TTL, เต็ม → S3 / survey เก่าดิบ → dump ลง S3)
//   2. ทุกช่องทาง (AI chat / broadcast / form + ข้อมูลเก่าที่ AI backfill)
//      ผลิตของชิ้นเดียวกัน = report → ตารางกลางเดียว, วิธีเก็บ = source
//   3. enum เป็นตาราง lookup (เพิ่มค่า = INSERT ไม่ต้อง migrate)
//   4. communities เป็น single source of truth — จบปัญหาชื่อชุมชน
//      สะกดไม่ตรงกัน 3 ที่ (DB / dropdown / forecast) อย่างถาวร
//   5. รองรับ contract dashboard #81 เต็มรูปแบบ
// ============================================================

Project ucr_ai_chatbot {
  database_type: 'PostgreSQL'
  Note: 'ต้องเปิด PostGIS extension (location เป็น Geometry POINT 4326)'
}

// ---------- master data ----------

Table communities {
  community_id serial  [pk]
  name         varchar [unique, not null, note: 'ชื่อ canonical — ที่เดียวในระบบ']
  lat          float   [null, note: 'พิกัดกลางชุมชน — จับคู่กับ forecast']
  lon          float   [null]
  is_active    bool    [default: true]

  Note: '''
  ★ single source of truth ของชื่อชุมชน
  - dropdown หน้า profile → generate จากตารางนี้ (เลิก hardcode ใน HTML = เลิก drift)
  - forecast ของทีม data → อ้างชื่อ/ id จากตารางนี้
  - users อ้างด้วย FK → typo เป็นไปไม่ได้อีกต่อไป
  (แก้ปัญหาที่เจอจริง: ชื่อสะกดไม่ตรงกัน 3 ที่ ทำให้ broadcast จับ user ไม่เจอ)
  '''
}

Table categories {
  id        serial  [pk]
  value     varchar [unique, not null, note: 'ทางเท้าชำรุด, ไฟฟ้าสาธารณะ, ขยะ, น้ำท่วม/น้ำขัง, อากาศร้อน, ...']
  is_active bool    [default: true, note: 'ปิดใช้โดยไม่ลบ — แถวเก่ายังอ้างได้']

  Note: '''
  enum หมวดปัญหา (ใช้คำว่า category ตามภาษา domain ของทีม — CONTEXT.md)
  ★ ตกลงกันแล้ว: ล็อก enum ใน tool spec record_complaint ด้วย (Gemini รองรับ)
    → AI เลือกได้เฉพาะค่าในลิสต์นี้ + DB บังคับซ้ำด้วย FK = สะอาด 2 ชั้น
  ★ ลิสต์ค่าใน tool spec กับตารางนี้ต้อง sync กัน — ทางที่ดี: ai_tool อ่านลิสต์
    จากตารางนี้ตอน start (ที่เดียว ไม่ drift)
  '''
}

// ---------- ผู้ใช้ ----------

Table users {
  lineuser_id  varchar [pk, note: 'LINE user id']
  // display_name เดิม → ตัดออก (dead column — ไม่เคยมีโค้ดเขียน/อ่าน; ใช้ nickname จาก LIFF แทน)
  nickname     varchar
  age_range    varchar [null, note: "ค่าจาก dropdown: 'ต่ำกว่า 18'|'18–25'|'26–35'|'36–45'|'46–60'|'มากกว่า 60' — validate ที่ app พอ ไม่ใส่ CHECK ใน DB (เป็นข้อความ UI มี en-dash – แก้ copy ของฟอร์มเมื่อไหร่ INSERT พัง + dashboard ไม่ filter ช่องนี้)"]
  gender       varchar [null, note: "ค่าจาก dropdown: 'ชาย'|'หญิง'|'อื่น ๆ'|'ไม่ระบุ' — validate ที่ app เหตุผลเดียวกับ age_range"]
  community_id int     [ref: > communities.community_id, null, note: 'FK แทน varchar เดิม — สะกดผิดไม่ได้']
  has_completed_profile bool [default: false]
  created_at   timestamp [note: 'Bangkok +07']
}

// ---------- บทสนทนา AI (anchor เบาๆ — ไม่ใช่ history!) ----------

Table conversations {
  conversation_id serial  [pk]
  lineuser_id     varchar [ref: > users.lineuser_id, not null]
  trigger         varchar [not null, note: "'broadcast:flood' | 'broadcast:heat' | 'user_initiated' | ..."]
  status          varchar [not null, note: "'active' | 'done' | 'abandoned'"]
  archive_key     varchar [null, note: 'S3 key ของบทสนทนาเต็มที่ dump เก็บเป็น backup']
  started_at      timestamp
  ended_at        timestamp [null]

  indexes {
    (lineuser_id, status) [note: 'หา conversation ที่ active ของ user (routing ข้อความเข้า AI)']
  }

  Note: '''
  1 บทสนทนา = 1 แถวเล็กๆ (ไม่บวม — ไม่มีเนื้อบทสนทนาในนี้!)
  มีไว้เพื่อ "ดู insight" โดย Postgres ไม่ต้องแบกเนื้อบทสนทนา:
  - เชิงตัวเลข (กี่ turn เฉลี่ย / เทกลางทางกี่ % / คุยช่วงไหนเยอะ) → query ตารางนี้
  - อยากอ่านเนื้อจริง (ดูว่า AI ถามดีมั้ย เอาไปปรับ prompt) → เปิดไฟล์ S3 ตาม archive_key
  เนื้อบทสนทนา: live → Redis (TTL 30 นาที) / จบแล้ว dump → S3
  (S3 กับ text แทบฟรี: 1,000 บทสนทนา ≈ 10MB ≈ เศษสตางค์/เดือน)
  หมายเหตุ: V2 ปัจจุบัน session หมด TTL แล้วหายถาวร — ตารางนี้ + S3 dump คือส่วนเสริม
  ที่ต้องเพิ่มตอน session จบ (จุดเสียบ: services/session.py)
  '''
}

// ---------- ตารางกลาง: ผลกลั่นจากทุกช่องทาง ----------

Table reports {
  report_id       serial  [pk]
  conversation_id int     [ref: > conversations.conversation_id, null, note: 'บทสนทนาที่ให้กำเนิด report นี้ (null สำหรับ form)']
  lineuser_id     varchar [ref: > users.lineuser_id, null, note: 'null ได้ (form anonymous)']
  community_id    int     [ref: > communities.community_id, null, note: 'snapshot ชุมชน ณ ตอนรายงาน']

  source          varchar [not null, note: "CHECK: 'ai' | 'broadcast' | 'form_report' | 'survey'(= ข้อมูลเก่าที่ AI backfill — ไม่มี producer เขียนใหม่) — dashboard filter/GROUP BY ช่องนี้ → บังคับที่ DB; ชื่อค่าตาม CONTEXT.md"]
  source_ref      varchar [null, note: 'บริบท เช่น broadcast alert (flood/heat/both), survey_version เก่า']

  // 4 field ของ record_complaint (ชื่อตามภาษา domain: category/notes ไม่ใช่ type/description)
  category_id     int     [ref: > categories.id, null, note: 'จาก tool enum — บังคับด้วย FK ซ้ำอีกชั้น']
  notes           varchar [null, note: 'รายละเอียดปัญหาในคำพูดของ resident — required สำหรับ source=ai']
  severity        varchar [null, note: "CHECK: 'low' | 'medium' | 'high' — ล็อก enum ใน tool spec เช่นกัน (AI แปลงคำพูด→ระดับเอง)"]
  title           varchar [null, note: 'AI สรุปสั้น 1 บรรทัด (#81 ขอ problem_summary — เพิ่มใน tool spec ทีหลังได้)']

  status          varchar [not null, note: "CHECK: 'completed' | 'new' | 'abandoned' | 'timeout' | 'cancelled' — dashboard filter ช่องนี้ → บังคับที่ DB"]
  is_complete     bool    [not null, note: 'ไม่มี default (ตั้งใจ) — ผู้เขียนทุกตัวต้องใส่เอง โดยเฉพาะ AI backfill ของเก่า: incomplete_reports คือ drop-off ต้องได้ false ห้ามติด true เงียบๆ']

  location_text   varchar [null, note: 'ตำแหน่งแบบคำพูด เช่น "หน้าปากซอย 5" — ตอนนี้ tool ให้ string เดียว ลงช่องนี้ไปก่อน']
  location_data   geometry [null, note: 'POINT 4326 → dashboard ปักหมุด (ST_X/ST_Y) — ฝั่ง AI จะอัปเกรดให้แยกพิกัดทีหลัง (รวมถึงรับ LINE location pin)']

  extraction_confidence float [null, note: 'คุณภาพ "การสกัด" ของ AI — ไม่ใช่ความจริงของเหตุการณ์ (#81)']
  confidence_by_field   jsonb [null, note: 'confidence รายช่อง — metadata ไม่ใช่ของ query']
  payload         jsonb   [null, note: 'raw extraction 1 ก้อนเล็ก/report (#81 ขอ); แถว backfill = raw answers เดิมของแถวนั้น (เข็มขัดนิรภัย — ของเต็มอยู่ S3) — ไม่ใช่บทสนทนา!']

  created_at      timestamp [not null, note: 'Bangkok +07 → serve เป็น ISO8601 +07:00']

  indexes {
    (source, created_at)
    (status, created_at)
    lineuser_id            [note: 'AI ดึง report เก่าของ user เป็นบริบทข้ามบทสนทนา']
    community_id           [note: 'แผนที่/สถิติราย ชุมชน']
    category_id
    // + GiST บน location_data (DBML เขียน type gist ไม่ได้ — ตอนทำ DDL:
    //   CREATE INDEX idx_reports_geom ON reports USING GIST (location_data))
  }

  Note: 'ตารางกลาง — dashboard อ่านที่เดียว ตาม contract #81 (field ครบ: null แทน omit)'
}

Table report_images {
  image_id   serial  [pk]
  report_id  int     [ref: > reports.report_id, not null]
  image_key  varchar [not null, note: 'storage key (uploads/ → จุดเสียบ S3)']
  created_at timestamp

  indexes { report_id }

  Note: 'รูปทุก source — serve ผ่าน endpoint JWT ตรง images[] + requires_auth (#81)'
}

// ---------- ไม่มีตาราง survey (ตั้งใจ) ----------
// V1 survey ถาม-ตอบแบบ fix ตายแล้ว — ไม่มี producer เขียนข้อมูลรูปแบบนี้อีก
// จึงไม่มี report_answers / survey_questions ใน schema นี้:
// ของดิบเก่า → dump ลง S3 (archive) แล้วให้ AI backfill สรุปเข้า reports
// (รายละเอียด: "การจัดการของเก่า" ท้ายไฟล์)

// ---------- log การยิงแจ้งเตือน (กันสแปม + response rate) ----------

Table outreach {
  outreach_id     serial  [pk]
  lineuser_id     varchar [ref: > users.lineuser_id, not null]
  community_id    int     [ref: > communities.community_id, null]
  alert_type      varchar [not null, note: "'flood' | 'heat' | 'both'"]
  sent_at         timestamp [not null]
  response        varchar [null, note: "null=เมิน | 'confirmed' | 'declined'"]
  conversation_id int     [ref: > conversations.conversation_id, null, note: 'ถ้าตอบแล้วกลายเป็นบทสนทนา']

  indexes {
    (lineuser_id, sent_at) [note: '★ frequency cap: ยิงหาคนนี้ล่าสุดเมื่อไหร่']
  }

  Note: '''
  บันทึก "เรายิงหาใคร เมื่อไหร่ เขาตอบมั้ย" — 1 push = 1 แถวเล็ก
  รองรับนโยบายกันสแปมที่ออกแบบไว้:
  - cap ต่อคน ~สัปดาห์ละครั้ง → เช็ค max(sent_at) ก่อนยิง
  - เมินติดกัน 2-3 ครั้ง → หยุดถาม (นับ response IS NULL ล่าสุด)
  - response rate ต่อชุมชน → dashboard/ทีมดูสุขภาพระบบ
  '''
}

// ============================================================
// สิ่งที่ "ไม่อยู่" ใน Postgres (ตั้งใจ):
//   - เนื้อบทสนทนา AI: live → Redis (TTL) / เต็ม → S3 (backup ราคาถูก)
//     Postgres มีแค่ conversations (anchor 1 แถว) + reports (ผลกลั่น)
//   - ข้อมูล survey เก่าแบบดิบ: dump → S3 — ใน Postgres เหลือเฉพาะ
//     ผลสรุปที่ AI backfill เข้า reports
//   - enum ล็อก 2 ชั้น: tool spec (AI เลือกได้เฉพาะค่าในลิสต์) + DB (FK/CHECK)
//     ★ ai_tool ควรอ่านลิสต์ category จากตาราง categories ตอน start — ที่เดียว ไม่ drift
//
// การจัดการของเก่า (V1 survey ตายแล้ว — ไม่มีอะไรเขียนรูปแบบนี้เพิ่ม):
//   - ของดิบ completed/incomplete_reports → dump ลง S3 ทั้งก้อน (archive)
//     แล้ว DROP ตารางเก่าออกจาก Postgres — backup ก่อนเสมอ
//   - AI backfill: อ่านของดิบ → สรุปเข้า reports (source='survey',
//     source_ref=survey_version) ด้วย tool spec + enum ชุดเดียวกับ live chat
//     → map ได้เท่าที่ข้อมูลเก่าบอก เช่น category ได้ / severity ที่ survey
//     ไม่เคยถาม = null (#81 ให้ส่ง null ตรงๆ อยู่แล้ว ไม่ใช่ละไว้)
//     raw answers ของแถวนั้นติดไว้ใน reports.payload เป็นเข็มขัดนิรภัย
//     ★ ไม่ block schema/งาน refactor — #81 ระบุเอง backfill อยู่นอก scope
//       → ทำเป็น batch job ทีหลังได้
//   - form_reports → reports (source='form_report', category ตรงชื่ออยู่แล้ว)
//   - broadcast_reports เดิมยังไม่มีข้อมูลจริง → drop
//
// จุดที่ต้องทำนอก DB ให้ครบวงจร:
//   - dropdown หน้า profile → เปลี่ยนเป็นดึงจากตาราง communities (เลิก hardcode)
//   - forecast ทีม data → ตกลงใช้ชื่อจาก communities (หรือส่ง community_id เลย)
// ============================================================
